<resources>
    <string name="app_name">My Medicare</string>
    <string name="welcome">Welcome to My Medicare!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_title">Please Login Here</string>
    <string name="username_hint">Username...</string>
    <string name="password_hint">Password...</string>
    <string name="submit">Submit</string>
    <string name="register_title">Please Register Here</string>
    <string name="first_name_hint">First Name...</string>
    <string name="last_name_hint">Last Name...</string>
    <string name="age_hint">Age...</string>
    <string name="address1_hint">Address 1...</string>
    <string name="address2_hint">Address 2...</string>
    <string name="phone_number_hint">Phone Number...</string>
    <string name="nurse_name_hint">Nurse Name...</string>
    <string name="user_name_hint">User Name...</string>
    <string name="full_name_hint">Full Name...</string>
    <string name="re_enter_password_hint">Re EnterPassword...</string>
    <string name="main_menu_title">Main Menu</string>
    <string name="new_reading"> Input New Reading</string>
    <string name="view_readings"> View Old Readings</string>
    <string name="customise_interface"> Customise interface</string>
    <string name="admin_control_panel"> Admin Control Panel</string>
    <string name="new_record_title"> Create a new Record</string>
    <string name="celcius_unit"> Celcius &#xb0;C</string>
    <string name="fahrenheit_unit"> Farenheit &#xb0;F</string>
    <string name="temperature_hint"> Temperature...</string>
    <string name="blood_pressure_low_hint"> Blood pressure Low...</string>
    <string name="blood_pressure_high_hint"> Blood pressure High...</string>
    <string name="heart_rate_hint"> Heart Rate...</string>
    <string name="view_records_title"> View Your Records</string>
    <string name="delete_record">Delete Record</string>
    <string name="logout">Logout</string>
    <string name="customisation_Title"> Customise Your App</string>
    <string name="font_size"> Font Size</string>
    <string name="font_colour"> Font Colour</string>
    <string name="background_colour"> Background Colour</string>
    <string name="choose_font_size"> Choose font size</string>
    <string name="small"> Small</string>
    <string name="medium"> Medium</string>
    <string name="large"> Large</string>
    <string name="choose_colour"> Choose a Colour</string>
    <string name="default_colour"> Default</string>
    <string name="red"> Red</string>
    <string name="green"> Green</string>
    <string name="blue"> Blue</string>
    <string name="send_text">Send Text to Nurse</string>
    <string name="recipient_name_hint"> Recipient Name Or Number...</string>
    <string name="your_message_hint"> Your Message...</string>
    <string name="send_message"> Send Message</string>
    <string name="modify_title">Modify Your Details</string>
    <string name="modify_personal_info">Modify Your Personal Info</string>
    <string name="admin_control_title"> Admin Control Panel</string>
    <string name="view_all_records"> View All Records</string>
    <string name="reset_password"> Reset Password</string>
    <string name="view_all_users"> View All Users</string>

</resources>
