<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/White"
    android:id="@+id/modifyInfoRoot"
    tools:context=".root.Activities.ModifyInfoActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modify_title"
        android:textSize="26sp"
        android:textColor="@color/Black"
        android:id="@+id/modify_title"
        android:layout_gravity="center_horizontal|top"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtmodifyUsername"
        android:layout_gravity="center_horizontal|top"
        android:hint="@string/user_name_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtmodifyFirstName"
        android:layout_gravity="center_horizontal|top"
        android:hint="@string/first_name_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtmodifyLastName"
        android:layout_gravity="center_horizontal|top"
        android:hint="@string/last_name_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtmodifyAge"
        android:layout_gravity="center_horizontal|top"
        android:hint="@string/age_hint"
        android:inputType="number"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtmodifyAddress1"
        android:layout_gravity="center_horizontal|top"
        android:hint="@string/address1_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtmodifyAddress2"
        android:layout_gravity="center_horizontal|top"
        android:hint="@string/address2_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/txtmodifyPhoneNumber"
        android:layout_gravity="center_horizontal|top"
        android:hint="@string/phone_number_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtmodifyNurseName"
        android:layout_gravity="center_horizontal|top"
        android:hint="@string/nurse_name_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtmodifyPassword"
        android:layout_gravity="center_horizontal|top"
        android:inputType="textPassword"
        android:hint="@string/password_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtmodifyReenterPassword"
        android:layout_gravity="center_horizontal|top"
        android:inputType="textPassword"
        android:hint="@string/re_enter_password_hint"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/submit"
        android:id="@+id/btnmodifySubmit"
        android:layout_gravity="center_horizontal|top"/>

</FrameLayout>
