<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/White"
    android:id="@+id/resetPasswordRoot"
    tools:context="com.needham.thomas.medicare.root.Activities.ResetPasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:id="@+id/ResetPasswordTitle"
        android:textSize="26sp"
        android:textColor="@color/Black"
        android:layout_gravity="center_horizontal|top"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtResetPasswordUsername"
        android:layout_gravity="center_horizontal|top"
        android:hint="@string/user_name_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtresetPasswordPW"
        android:layout_gravity="center_horizontal|top"
        android:hint="@string/password_hint"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtResetPasswordReenterPW"
        android:layout_gravity="center_horizontal|top"
        android:hint="@string/re_enter_password_hint"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/btnResetPasswordSubmit"
        android:layout_gravity="center_horizontal|top"/>

</FrameLayout>
