<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/White"
    android:id="@+id/adminControlRoot"
    tools:context="com.needham.thomas.medicare.root.Activities.AdminControlPanelActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_control_panel"
        android:id="@+id/adminControlTitle"
        android:textSize="26sp"
        android:textColor="@color/Black"
        android:layout_gravity="center_horizontal|top"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_all_records"
        android:id="@+id/btnViewAllRecords"
        android:layout_gravity="center_horizontal|top"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:id="@+id/btnResetPassword"
        android:layout_gravity="center_horizontal|top"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_all_users"
        android:id="@+id/btnViewAllUsers"
        android:layout_gravity="center_horizontal|top"/>
</FrameLayout>
